src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhU.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: U"
expression: snapshot
---
initial configure:
size: 1000 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1000 × 688, bounds: 1248 × 688, states: [Activated]
